Jetty upgrade to 12.1.0